--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,16 @@ sap.api.key.ip=172.16.1.7:81
 sap.api.key.username=ERGAPI
 sap.api.key.password=ERG@API
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/product
-spring.datasource.username=juragan
-spring.datasource.password=hjf*zhF5a@)UdCtn
+spring.datasource.url=jdbc:mariadb://103.217.145.240:3366/product
+spring.datasource.username=erigoproduct
+spring.datasource.password=ERG@2024@#$
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+#spring.datasource.url=jdbc:mariadb://localhost:3306/product
+#spring.datasource.username=juragan
+#spring.datasource.password=hjf*zhF5a@)UdCtn
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
