Update New Product to POS Oktopus. In Production

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ ginee.access.key.polka=9758afa8d04ae0b4
 polka.secret.key=53gfdsg897fsdhn98003
 erigo.secret.key=234gfsad45ret8945398
 
+erigo.service.pos.url=http://172.16.1.23:8282
+
 sap.api.key.ip=172.16.1.7:81
 sap.api.key.username=ERGAPI
 sap.api.key.password=ERG@API
